# Oskar-tasks

./: CMakeLists.txt  main.cpp
zad1/: CarScaleOfFines.cpp  CarScaleOfFines.h  Constant.h  ScaleOfFines.h  TariffApplication.cpp  TariffApplication.h  TruckScaleOfFines.cpp  TruckScaleOfFines.h
zad2/: ClassicSum.cpp  ClassicSum.h  GaussSum.cpp  GaussSum.h
zad3/: Factorial.cpp  Factorial.h  Fibonacci.cpp  Fibonacci.h
zad4/: Matrix.cpp  Matrix.h
zad5/: FileReader.cpp  FileReader.h
